--- a/pom.xml
+++ b/pom.xml
@@ -11,26 +11,26 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <serenity.version>1.0.47</serenity.version>
-        <serenity.maven.version>1.0.47</serenity.maven.version>
-        <webdriver.driver>firefox</webdriver.driver>
+        <serenity.version>1.8.1</serenity.version>
+        <serenity.maven.version>1.8.1</serenity.maven.version>
+        <webdriver.driver>chrome</webdriver.driver>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>2.53.1</version>
+            <version>3.7.1</version>
         </dependency>
         <dependency>
             <groupId>net.serenity-bdd</groupId>
-            <artifactId>core</artifactId>
-            <version>${serenity.version}</version>
+            <artifactId>serenity-core</artifactId>
+            <version>1.8.1</version>
         </dependency>
         <dependency>
             <groupId>net.serenity-bdd</groupId>
             <artifactId>serenity-junit</artifactId>
-            <version>${serenity.version}</version>
+            <version>1.8.0</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -49,21 +49,44 @@
             <version>1.7.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.20.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18.1</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.18</version>
+                <version>2.18.1</version>
                 <configuration>
                     <includes>
-                        <include>**/features/**/When*.java</include>
+                        <include>**/features/**/*.java</include>
+                        <include>**/jbehave/**/*.java</include>
+                        <include>**/cucumber/*.java</include>
                     </includes>
-                    <systemProperties>
-                        <webdriver.driver>${webdriver.driver}</webdriver.driver>
 
-                    </systemProperties>
+                    <excludes>
+                        <exclude>**/*WithFailures.java</exclude>
+                    </excludes>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>net.serenity-bdd.maven.plugins</groupId>
@@ -72,8 +95,8 @@
                 <dependencies>
                     <dependency>
                         <groupId>net.serenity-bdd</groupId>
-                        <artifactId>core</artifactId>
-                        <version>${serenity.version}</version>
+                        <artifactId>serenity-core</artifactId>
+                        <version>1.8.1</version>
                     </dependency>
                 </dependencies>
                 <executions>
